# fits

./: .gitignore  README.md  daily_coverage_change.sql  setup.cfg  update_coverage_results_module.sql  v_latest_branches_coverage_results.sql  weighted_diff_coverage_change.sql  weighted_latest_coverage_percent.sql
config/: db_config.example.ini  db_config.ini
fits/: __init__.py  artifacts.py  config.py  run.py  uploader.py
fits/analyzers/: __init__.py  coverage.py  dtk.py
