[metadata]
name = fits-cli
version = 0.1.0
description = FITS analysis CLI
long_description = file: README.md
long_description_content_type = text/markdown
author = FITS
license = MIT

[options]
packages = find:
python_requires = >=3.10
install_requires =
    mysql-connector-python>=8.4
include_package_data = True
package_dir =
    = .

[options.packages.find]
where = .
